--- a/jeaf-generator-test-custom-extension-usage/src-gen/main/resources/products/product-services.yml
+++ b/jeaf-generator-test-custom-extension-usage/src-gen/main/resources/products/product-services.yml
@@ -1,4 +1,4 @@
-openapi: 3.0.0
+openapi: 3.0.3
 
 info:
   title: Product Services
@@ -52,9 +52,19 @@ paths:
         url: https://jeaf.anaptecs.de/link2
       responses:
         '200':
-          description: >- 
+          description: >-
             TODO Please add comment
-          content:  
+          headers:
+              Max-TTL:
+                schema:
+                  type: integer
+              Cache-Control:
+                schema:
+                  type: string
+                  default: 'public, max-age=10000'
+                  description: >-
+                    Results for this call are cacheable for the duration as it is defined in this header field
+          content:
             application/json:
               schema:
                 type: array
@@ -79,9 +89,9 @@ paths:
               $ref: '../base/product-base.yml#/components/schemas/Product'
       responses:
         '200':
-          description: >- 
+          description: >-
             TODO Please add comment
-          content:  
+          content:
             application/json:
               schema:
                 type: boolean
@@ -116,9 +126,9 @@ paths:
             example: '1234-345'
       responses:
         '200':
-          description: >- 
+          description: >-
             TODO Please add comment
-          content:  
+          content:
             application/json:
               schema:
                 $ref: '../base/product-base.yml#/components/schemas/Product'
@@ -173,9 +183,9 @@ paths:
             type: string
       responses:
         '200':
-          description: >- 
+          description: >-
             TODO Please add comment
-          content:  
+          content:
             application/json:
               schema:
                 $ref: '../base/product-base.yml#/components/schemas/Sortiment'
@@ -201,9 +211,9 @@ paths:
               example: 'MOBILE_APP'
       responses:
         '200':
-          description: >- 
+          description: >-
             TODO Please add comment
-          content:  
+          content:
             application/json:
               schema:
                 type: string
@@ -226,9 +236,9 @@ paths:
       deprecated: true
       responses:
         '200':
-          description: >- 
+          description: >-
             TODO Please add comment
-          content:  
+          content:
             application/json:
               schema:
                 type: string
@@ -272,9 +282,9 @@ paths:
             type: string
       responses:
         '200':
-          description: >- 
+          description: >-
             TODO Please add comment
-          content:  
+          content:
             application/json:
               schema:
                 type: string
@@ -330,9 +340,9 @@ paths:
             format: int32
       responses:
         '200':
-          description: >- 
+          description: >-
             TODO Please add comment
-          content:  
+          content:
             application/json:
               schema:
                 type: string
@@ -355,9 +365,9 @@ paths:
               deprecated: true
       responses:
         '200':
-          description: >- 
+          description: >-
             TODO Please add comment
-          content:  
+          content:
             application/json:
               schema:
                 type: string
@@ -391,10 +401,10 @@ paths:
       operationId: deprecatedComplexReturn
       responses:
         '200':
-          description: >- 
+          description: >-
             TODO Please add comment
             Operation has deprected return type. Please be aware that deprecations on complex return types are not supported. Instead the whole operation needs to be set to deprecated.
-          content:  
+          content:
             application/json:
               schema:
                 $ref: '../base/product-base.yml#/components/schemas/Product'
@@ -474,9 +484,9 @@ paths:
                 nullable: false
       responses:
         '200':
-          description: >- 
+          description: >-
             Created channel code
-          content:  
+          content:
             application/json:
               schema:
                 type: string
@@ -511,9 +521,9 @@ paths:
                 example: '["CHF", "EUR", "USD"]'
       responses:
         '200':
-          description: >- 
+          description: >-
             TODO Please add comment
-          content:  
+          content:
             application/json:
               schema:
                 description: >-
@@ -550,9 +560,9 @@ paths:
                 example: 'CHF'
       responses:
         '200':
-          description: >- 
+          description: >-
             TODO Please add comment
-          content:  
+          content:
             application/json:
               schema:
                 description: >-
@@ -579,9 +589,9 @@ paths:
               $ref: '../base/product-base.yml#/components/schemas/StringCodeType'
       responses:
         '200':
-          description: >- 
+          description: >-
             TODO Please add comment
-          content:  
+          content:
             application/json:
               schema:
                 $ref: '../base/product-base.yml#/components/schemas/IntegerCodeType'
