--- a/jeaf-message-constants-generator/pom.xml
+++ b/jeaf-message-constants-generator/pom.xml
@@ -37,27 +37,27 @@
 		<dependency>
 			<groupId>org.apache.poi</groupId>
 			<artifactId>poi-ooxml</artifactId>
-			<version>5.2.2</version>
+			<version>${apache.poi.version}</version>
 		</dependency>
 
 		<!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
 		<dependency>
 		    <groupId>commons-io</groupId>
 		    <artifactId>commons-io</artifactId>
-		    <version>2.11.0</version>
+		    <version>${apache.commons.io.version}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.xmlunit</groupId>
 			<artifactId>xmlunit-core</artifactId>
-			<version>2.7.0</version>
+			<version>${xml.unit.version}</version>
 			<scope>test</scope>
 		</dependency>
 
 		<dependency>
 			<groupId>org.xmlunit</groupId>
 			<artifactId>xmlunit-matchers</artifactId>
-			<version>2.7.0</version>
+			<version>${xml.unit.version}</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
