--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,9 @@
 		
 		<jackson.version>2.13.1</jackson.version>
 		<validation-api.version>2.0.1.Final</validation-api.version>
+		<apache.poi.version>5.2.2</apache.poi.version>
+		<apache.commons.io.version>2.11.0</apache.commons.io.version>
+		<xml.unit.version>2.7.0</xml.unit.version>
 	</properties>
 
 	<modules>
