--- a/jeaf-generator-test-custom-extension-usage/src-gen/main/resources/products/product-services.yml
+++ b/jeaf-generator-test-custom-extension-usage/src-gen/main/resources/products/product-services.yml
@@ -888,6 +888,10 @@ components:
     Sale:
       type: object
       additionalProperties: false
+      description: >-
+        Chännel
+        €
+        Ö
       required:
         - transactionAmount
       properties:
