--- a/jeaf-generator/.settings/org.eclipse.core.resources.prefs
+++ b/jeaf-generator/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,3 @@
-#Thu Jan 10 18:20:01 CET 2019
+#Thu May 05 08:56:52 CEST 2022
 eclipse.preferences.version=1
-encoding/<project>=ISO-8859-1
+encoding/<project>=UTF-8
