--- a/jeaf-generator-test-spring-rest-proxy/src-gen/main/resources/productservice-rest-client.yaml
+++ b/jeaf-generator-test-spring-rest-proxy/src-gen/main/resources/productservice-rest-client.yaml
@@ -9,7 +9,7 @@ cookieDomain:
 # Path of the cookie that is used in requests.
 cookiePath:
 
-# Comma separated list of http header names that should be considered to be sensitive.
+# List of http header names that should be considered to be sensitive.
 sensitiveHeaders: 
  - Authorzation
 
