--- a/jeaf-generator-test-spring-jersey/pom.xml
+++ b/jeaf-generator-test-spring-jersey/pom.xml
@@ -57,9 +57,16 @@
 
 		<dependency>
 			<groupId>com.anaptecs.jeaf.rest</groupId>
-			<artifactId>jeaf-rest-composite-type-service-provider</artifactId>
+			<artifactId>jeaf-rest-composite-type-api</artifactId>
 			<version>${jeaf.rest.api.version}</version>
 		</dependency>
+
+		<dependency>
+			<groupId>com.anaptecs.jeaf.rest</groupId>
+			<artifactId>jeaf-rest-composite-type-impl-kryo</artifactId>
+			<version>${jeaf.rest.impl.version}</version>
+		</dependency>
+		
 
 		<dependency>
 			<groupId>javax.validation</groupId>
