--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>com.anaptecs.jeaf</groupId>
 		<artifactId>jeaf-plugin-project-parent</artifactId>
-		<version>1.0.39</version>
+		<version>1.0.40</version>
 	</parent>
 
 	<groupId>com.anaptecs.jeaf.generator</groupId>
@@ -38,10 +38,10 @@
 		<jeaf.json.api.version>1.6.15</jeaf.json.api.version>
 		<jeaf.json.impl.version>1.6.16</jeaf.json.impl.version>
 		<jeaf.jersey.extensions.version>1.6.0</jeaf.jersey.extensions.version>
-		<jeaf.rest.api.version>1.6.1-RC03-SNAPSHOT</jeaf.rest.api.version>
-		<jeaf.rest.impl.version>1.6.1-RC03-SNAPSHOT</jeaf.rest.impl.version>
-		<jeaf.test.model.version>1.0.45-SNAPSHOT</jeaf.test.model.version>
-		<jeaf.generator.messages.version>1.6.0-SNAPSHOT</jeaf.generator.messages.version>
+		<jeaf.rest.api.version>1.6.1</jeaf.rest.api.version>
+		<jeaf.rest.impl.version>1.6.1</jeaf.rest.impl.version>
+		<jeaf.test.model.version>1.0.45</jeaf.test.model.version>
+		<jeaf.generator.messages.version>1.6.0</jeaf.generator.messages.version>
 		
 		<!-- Please be aware that Spring Boot and Spring core versions must match together -->
 		<spring.boot.version>2.7.2</spring.boot.version>
