--- a/pom.xml
+++ b/pom.xml
@@ -40,8 +40,8 @@
 		<jeaf.jersey.extensions.version>1.6.0</jeaf.jersey.extensions.version>
 		<jeaf.rest.api.version>1.6.1</jeaf.rest.api.version>
 		<jeaf.rest.impl.version>1.6.1</jeaf.rest.impl.version>
-		<jeaf.test.model.version>1.0.47-SNAPSHOT</jeaf.test.model.version>
-		<jeaf.generator.messages.version>1.6.1-SNAPSHOT</jeaf.generator.messages.version>
+		<jeaf.test.model.version>1.0.47</jeaf.test.model.version>
+		<jeaf.generator.messages.version>1.6.1</jeaf.generator.messages.version>
 		
 		<!-- Please be aware that Spring Boot and Spring core versions must match together -->
 		<spring.boot.version>2.7.2</spring.boot.version>
