--- a/jeaf-generator-test-rest/pom.xml
+++ b/jeaf-generator-test-rest/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.anaptecs.jeaf.generator</groupId>
 		<artifactId>jeaf-generator-project</artifactId>
-		<version>1.6.65</version>
+		<version>1.6.66-SNAPSHOT</version>
 	</parent>
 
 	<name>JEAF Generator Test REST</name>
