--- a/jeaf-generator-test-custom-extension-usage/src-gen/main/resources/products/product-services.yml
+++ b/jeaf-generator-test-custom-extension-usage/src-gen/main/resources/products/product-services.yml
@@ -1144,6 +1144,18 @@ paths:
           $ref: '#/components/responses/CustomErrorResponse'
     
 
+  /products/special-header-params:
+    get:
+      operationId: testSpecialHeaderParams
+      responses:
+    
+    
+        '400':
+          $ref: '#/components/responses/CustomErrorResponse'
+        'default':
+          $ref: '#/components/responses/CustomErrorResponse'
+    
+
 
 security:
   - {}
