--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>com.anaptecs.jeaf</groupId>
 		<artifactId>jeaf-plugin-project-parent</artifactId>
-		<version>1.0.41-SNAPSHOT</version>
+		<version>1.0.41</version>
 	</parent>
 
 	<groupId>com.anaptecs.jeaf.generator</groupId>
@@ -40,12 +40,12 @@
 		<jeaf.jersey.extensions.version>1.6.0</jeaf.jersey.extensions.version>
 		<jeaf.rest.api.version>1.6.2</jeaf.rest.api.version>
 		<jeaf.rest.impl.version>1.6.2.1</jeaf.rest.impl.version>
-		<jeaf.test.model.version>1.0.49-SNAPSHOT</jeaf.test.model.version>
-		<jeaf.generator.messages.version>1.6.3-SNAPSHOT</jeaf.generator.messages.version>
+		<jeaf.test.model.version>1.0.49</jeaf.test.model.version>
+		<jeaf.generator.messages.version>1.6.3</jeaf.generator.messages.version>
 		
 		<!-- Please be aware that Spring Boot and Spring core versions must match together -->
-		<spring.boot.version>2.7.2</spring.boot.version>
-		<spring.core.version>5.3.22</spring.core.version>
+		<spring.boot.version>2.7.5</spring.boot.version>
+		<spring.core.version>5.3.23</spring.core.version>
 	</properties>
 
 	<modules>
