--- a/jeaf-generator-test-custom-extension-usage/src-gen/main/resources/base/product-base.yml
+++ b/jeaf-generator-test-custom-extension-usage/src-gen/main/resources/base/product-base.yml
@@ -1586,6 +1586,10 @@ components:
               nullable: false
             realBooking:
               $ref: '#/components/schemas/Booking'
+            inventories:
+              type: array
+              items:
+                $ref: '#/components/schemas/InventoryType'
 
     # com.anaptecs.jeaf.junit.openapi.base.WeirdParent
     WeirdParent:
