--- a/jeaf-generator-test-spring-rest-proxy/.settings/org.eclipse.core.resources.prefs
+++ b/jeaf-generator-test-spring-rest-proxy/.settings/org.eclipse.core.resources.prefs
@@ -6,4 +6,5 @@ encoding//src-gen/test/resources=UTF-8
 encoding//src/main/java=UTF-8
 encoding//src/main/resources=UTF-8
 encoding//src/test/java=UTF-8
+encoding//src/test/resources=UTF-8
 encoding/<project>=UTF-8
