--- a/jeaf-generator-test-open-api/src-gen/main/resources/products/product-services.yml
+++ b/jeaf-generator-test-open-api/src-gen/main/resources/products/product-services.yml
@@ -1156,6 +1156,76 @@ paths:
           $ref: '#/components/responses/CustomErrorResponse'
     
 
+  /products/technicalHeaderBeanParam:
+    get:
+      operationId: testTechnicalHeaderBean
+      parameters:
+        - name: Reseller
+          in: header
+          required: true
+          schema:
+            type: string
+        - name: Authentication
+          in: header
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: >-
+            TODO: Please add comment for response
+          content:
+            application/json:
+              schema:
+                type: string
+          headers:
+            X-Global-Response-Header:
+              schema:
+                type: string
+                default: 'Hello World'
+    
+    
+        '400':
+          $ref: '#/components/responses/CustomErrorResponse'
+        'default':
+          $ref: '#/components/responses/CustomErrorResponse'
+    
+
+  /products/technicalHeaderParam:
+    get:
+      operationId: testTechnicalHeaderParam
+      parameters:
+        - name: Reseller
+          in: header
+          required: true
+          schema:
+            type: string
+        - name: Authentication
+          in: header
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: >-
+            TODO: Please add comment for response
+          content:
+            application/json:
+              schema:
+                type: string
+          headers:
+            X-Global-Response-Header:
+              schema:
+                type: string
+                default: 'Hello World'
+    
+    
+        '400':
+          $ref: '#/components/responses/CustomErrorResponse'
+        'default':
+          $ref: '#/components/responses/CustomErrorResponse'
+    
+
 
 security:
   - {}
